# opentelemetry-python-contrib

./: .codespellrc  .flake8  .git-blame-ignore-revs  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .rstcheck.cfg  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  COMMIT_EDITMSGB  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  RELEASING.md  bootstrap_gen.py  coverage-requirements.txt  dev-requirements.txt  docker-compose.yml  docs-requirements.txt  eachdist.ini  gen-requirements.txt  lint-requirements.txt  mypy.ini  out.txt  pyproject.toml  pytest.ini  replace_license_headers.py  requirements.txt  rtd-requirements.txt  session.md  test-constraints.txt  test_jinja.py  (+2 more)
exporter-auth-provider/gcp-auth-provider/: README.rst  pyproject.toml
exporter/opentelemetry-exporter-clickhouse-genai/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
exporter/opentelemetry-exporter-clickhouse-genai/tests/: conftest.py  test_config.py  test_trace_exporter.py
exporter/opentelemetry-exporter-credential-provider-gcp/: README.rst  pyproject.toml  test-requirements.txt
exporter/opentelemetry-exporter-credential-provider-gcp/tests/: test_credential_provider.py
exporter/opentelemetry-exporter-prometheus-remote-write/: README.rst  pyproject.toml  setup.cfg  test-requirements.txt
exporter/opentelemetry-exporter-prometheus-remote-write/example/: Dockerfile  README.md  docker-compose.yml  sampleapp.py
exporter/opentelemetry-exporter-prometheus-remote-write/examples/: sampleapp.py
exporter/opentelemetry-exporter-prometheus-remote-write/proto/: README.md  generate-proto-py.sh
exporter/opentelemetry-exporter-prometheus-remote-write/tests/: conftest.py  test_prometheus_remote_write_exporter.py
exporter/opentelemetry-exporter-richconsole/: pyproject.toml  setup.cfg  test-requirements.txt
exporter/opentelemetry-exporter-richconsole/tests/: test_rich_exporter.py
exporter/opentelemetry-genai-analytics-api/: README.md  pyproject.toml
exporter/opentelemetry-genai-analytics-api/tests/: __init__.py  conftest.py  test_api.py
handlers/opentelemetry-structlog/: pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-alephalpha/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-alephalpha/.changelog/: 1.added
instrumentation-genai/opentelemetry-instrumentation-alephalpha/tests/: conftest.py  requirements.latest.txt  requirements.oldest.txt  test_alephalpha.py  test_completion.py
instrumentation-genai/opentelemetry-instrumentation-anthropic/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-anthropic/tests/: conftest.py  requirements.latest.txt  requirements.oldest.txt  requirements.pydantic1.txt  test_async_messages.py  test_async_wrappers.py  test_instrumentor.py  test_integration.py  test_sync_messages.py
instrumentation-genai/opentelemetry-instrumentation-claude-agent-sdk/: CHANGELOG.md  CONTRIBUTING_CHECKLIST.md  README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-claude-agent-sdk/tests/: conftest.py  requirements.latest.txt  requirements.oldest.txt  test_attributes.py  test_edge_cases.py  test_instrumentor.py  test_integration.py  test_mocks.py  test_span_validation.py  test_task_subagent_real_data.py  test_unit.py  test_with_cassettes.py
instrumentation-genai/opentelemetry-instrumentation-crewai/: README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-crewai/.changelog/: 1.added  4860.added
instrumentation-genai/opentelemetry-instrumentation-crewai/tests/: conftest.py  (+8 more)
instrumentation-genai/opentelemetry-instrumentation-google-genai/: .gitignore  CHANGELOG.md  Makefile  README.rst  TODOS.md  pyproject.toml  pytest.ini  tox.ini
instrumentation-genai/opentelemetry-instrumentation-groq/: README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-langchain/: CHANGELOG.md  NOTICE  README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-mcp/: README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-mem0/: CHANGELOG.md  LICENSE  README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-ollama/: README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-openai-agents/: .gitignore  CHANGELOG.md  README.rst  events.yaml  metrics.yaml  pyproject.toml  registry.yaml  spans.yaml
instrumentation-genai/opentelemetry-instrumentation-openai-agents-v2/: .gitignore  CHANGELOG.md  LICENSE  README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-openai-v2/: CHANGELOG.md  README.rst  pyproject.toml  test-requirements-0.txt  test-requirements-1.txt  test-requirements.txt
instrumentation-genai/opentelemetry-instrumentation-together/: README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-vertexai/: CHANGELOG.md  README.rst  pyproject.toml  test-requirements-0.txt  test-requirements-1.txt
instrumentation-genai/opentelemetry-instrumentation-vllm/: README.rst  pyproject.toml
instrumentation/opentelemetry-instrumentation-aiokafka/: README.rst  pyproject.toml  test-requirements.txt
opentelemetry/: README.rst  setup.cfg  setup.py
opentelemetry-auto-instrument/: pyproject.toml  setup.py
opentelemetry-contrib-instrumentations/: README.rst  pyproject.toml  setup.cfg
opentelemetry-distro/: README.rst  pyproject.toml  setup.cfg  test-requirements.txt
opentelemetry-distro/tests/: test_distro.py
opentelemetry-instrumentation/: README.rst  pyproject.toml  setup.cfg  test-requirements-wrapt1.txt  test-requirements-wrapt2.txt  test-requirements.txt
opentelemetry-instrumentation/tests/: test_bootstrap.py  test_cidict.py  test_dependencies.py  test_distro.py  test_genai_utils.py  test_instrumentor.py  test_labeler.py  test_log_utils.py  test_propagators.py  test_semconv.py  test_semconv_status.py  test_utils.py
opentelemetry/tests/: test_bootstrap.py  test_components.py  test_conf.py  test_instrument.py
(+3628 files in other folders)
