[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-contrib-instrumentations"
dynamic = [
    "version",
]
description = "OpenTelemetry Contrib Instrumentation Packages"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "opentelemetry-instrumentation-aio-pika==0.56b0",
    "opentelemetry-instrumentation-aiohttp-client==0.56b0",
    "opentelemetry-instrumentation-aiohttp-server==0.56b0",
    "opentelemetry-instrumentation-aiokafka==0.56b0",
    "opentelemetry-instrumentation-aiopg==0.56b0",
    "opentelemetry-instrumentation-asgi==0.56b0",
    "opentelemetry-instrumentation-asyncclick==0.56b0",
    "opentelemetry-instrumentation-asyncio==0.56b0",
    "opentelemetry-instrumentation-asyncpg==0.56b0",
    "opentelemetry-instrumentation-aws-lambda==0.56b0",
    "opentelemetry-instrumentation-boto==0.56b0",
    "opentelemetry-instrumentation-boto3sqs==0.56b0",
    "opentelemetry-instrumentation-botocore==0.56b0",
    "opentelemetry-instrumentation-cassandra==0.56b0",
    "opentelemetry-instrumentation-celery==0.56b0",
    "opentelemetry-instrumentation-click==0.56b0",
    "opentelemetry-instrumentation-confluent-kafka==0.56b0",
    "opentelemetry-instrumentation-dbapi==0.56b0",
    "opentelemetry-instrumentation-django==0.56b0",
    "opentelemetry-instrumentation-elasticsearch==0.56b0",
    "opentelemetry-instrumentation-falcon==0.56b0",
    "opentelemetry-instrumentation-fastapi==0.56b0",
    "opentelemetry-instrumentation-flask==0.56b0",
    "opentelemetry-instrumentation-grpc==0.56b0",
    "opentelemetry-instrumentation-httpx==0.56b0",
    "opentelemetry-instrumentation-jinja2==0.56b0",
    "opentelemetry-instrumentation-kafka-python==0.56b0",
    "opentelemetry-instrumentation-logging==0.56b0",
    "opentelemetry-instrumentation-mysql==0.56b0",
    "opentelemetry-instrumentation-mysqlclient==0.56b0",
    "opentelemetry-instrumentation-pika==0.56b0",
    "opentelemetry-instrumentation-psycopg==0.56b0",
    "opentelemetry-instrumentation-psycopg2==0.56b0",
    "opentelemetry-instrumentation-pymemcache==0.56b0",
    "opentelemetry-instrumentation-pymongo==0.56b0",
    "opentelemetry-instrumentation-pymssql==0.56b0",
    "opentelemetry-instrumentation-pymysql==0.56b0",
    "opentelemetry-instrumentation-pyramid==0.56b0",
    "opentelemetry-instrumentation-redis==0.56b0",
    "opentelemetry-instrumentation-remoulade==0.56b0",
    "opentelemetry-instrumentation-requests==0.56b0",
    "opentelemetry-instrumentation-sqlalchemy==0.56b0",
    "opentelemetry-instrumentation-sqlite3==0.56b0",
    "opentelemetry-instrumentation-starlette==0.56b0",
    "opentelemetry-instrumentation-system-metrics==0.56b0",
    "opentelemetry-instrumentation-threading==0.56b0",
    "opentelemetry-instrumentation-tornado==0.56b0",
    "opentelemetry-instrumentation-tortoiseorm==0.56b0",
    "opentelemetry-instrumentation-urllib==0.56b0",
    "opentelemetry-instrumentation-urllib3==0.56b0",
    "opentelemetry-instrumentation-wsgi==0.56b0",
]

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python-contrib/tree/main/opentelemetry-contrib-instrumentations"
Repository = "https://github.com/open-telemetry/opentelemetry-python-contrib"

[tool.hatch.version]
path = "src/opentelemetry/contrib-instrumentations/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/opentelemetry",
]
