[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-contrib-instrumentations"
dynamic = [
    "version",
]
description = "OpenTelemetry Contrib Instrumentation Packages"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "opentelemetry-instrumentation-aio-pika==0.61b0.dev",
    "opentelemetry-instrumentation-aiohttp-client==0.61b0.dev",
    "opentelemetry-instrumentation-aiohttp-server==0.61b0.dev",
    "opentelemetry-instrumentation-aiokafka==0.61b0.dev",
    "opentelemetry-instrumentation-aiopg==0.61b0.dev",
    "opentelemetry-instrumentation-asgi==0.61b0.dev",
    "opentelemetry-instrumentation-asyncclick==0.61b0.dev",
    "opentelemetry-instrumentation-asyncio==0.61b0.dev",
    "opentelemetry-instrumentation-asyncpg==0.61b0.dev",
    "opentelemetry-instrumentation-aws-lambda==0.61b0.dev",
    "opentelemetry-instrumentation-boto==0.61b0.dev",
    "opentelemetry-instrumentation-boto3sqs==0.61b0.dev",
    "opentelemetry-instrumentation-botocore==0.61b0.dev",
    "opentelemetry-instrumentation-cassandra==0.61b0.dev",
    "opentelemetry-instrumentation-celery==0.61b0.dev",
    "opentelemetry-instrumentation-click==0.61b0.dev",
    "opentelemetry-instrumentation-confluent-kafka==0.61b0.dev",
    "opentelemetry-instrumentation-dbapi==0.61b0.dev",
    "opentelemetry-instrumentation-django==0.61b0.dev",
    "opentelemetry-instrumentation-elasticsearch==0.61b0.dev",
    "opentelemetry-instrumentation-falcon==0.61b0.dev",
    "opentelemetry-instrumentation-fastapi==0.61b0.dev",
    "opentelemetry-instrumentation-flask==0.61b0.dev",
    "opentelemetry-instrumentation-grpc==0.61b0.dev",
    "opentelemetry-instrumentation-httpx==0.61b0.dev",
    "opentelemetry-instrumentation-jinja2==0.61b0.dev",
    "opentelemetry-instrumentation-kafka-python==0.61b0.dev",
    "opentelemetry-instrumentation-logging==0.61b0.dev",
    "opentelemetry-instrumentation-mysql==0.61b0.dev",
    "opentelemetry-instrumentation-mysqlclient==0.61b0.dev",
    "opentelemetry-instrumentation-pika==0.61b0.dev",
    "opentelemetry-instrumentation-psycopg==0.61b0.dev",
    "opentelemetry-instrumentation-psycopg2==0.61b0.dev",
    "opentelemetry-instrumentation-pymemcache==0.61b0.dev",
    "opentelemetry-instrumentation-pymongo==0.61b0.dev",
    "opentelemetry-instrumentation-pymssql==0.61b0.dev",
    "opentelemetry-instrumentation-pymysql==0.61b0.dev",
    "opentelemetry-instrumentation-pyramid==0.61b0.dev",
    "opentelemetry-instrumentation-redis==0.61b0.dev",
    "opentelemetry-instrumentation-remoulade==0.61b0.dev",
    "opentelemetry-instrumentation-requests==0.61b0.dev",
    "opentelemetry-instrumentation-sqlalchemy==0.61b0.dev",
    "opentelemetry-instrumentation-sqlite3==0.61b0.dev",
    "opentelemetry-instrumentation-starlette==0.61b0.dev",
    "opentelemetry-instrumentation-system-metrics==0.61b0.dev",
    "opentelemetry-instrumentation-threading==0.61b0.dev",
    "opentelemetry-instrumentation-tornado==0.61b0.dev",
    "opentelemetry-instrumentation-tortoiseorm==0.61b0.dev",
    "opentelemetry-instrumentation-urllib==0.61b0.dev",
    "opentelemetry-instrumentation-urllib3==0.61b0.dev",
    "opentelemetry-instrumentation-wsgi==0.61b0.dev",
]

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python-contrib/tree/main/opentelemetry-contrib-instrumentations"
Repository = "https://github.com/open-telemetry/opentelemetry-python-contrib"

[tool.hatch.version]
path = "src/opentelemetry/contrib-instrumentations/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/opentelemetry",
]
