# Copyright The OpenTelemetry Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[metadata]
name = opentelemetry
description = OpenTelemetry Python
long_description = file: README.rst
long_description_content_type = text/x-rst
author = OpenTelemetry Authors
author_email = cncf-opentelemetry-contributors@lists.cncf.io
url = https://github.com/open-telemetry/opentelemetry-python-contrib/tree/main/opentelemetry
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find_namespace:
zip_safe = False
include_package_data = True
install_requires =
    opentelemetry-api ~= 1.5
    opentelemetry-sdk ~= 1.5
    opentelemetry-instrumentation ~= 0.24b0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    opentelemetry-instrument = opentelemetry.cmd.instrument.instrument:run
    opentelemetry-bootstrap = opentelemetry.cmd.instrument.bootstrap:run

[options.extras_require]
otlp-http =
    opentelemetry-exporter-otlp-proto-http ~= 1.5.0
otlp-grpc =
    opentelemetry-exporter-otlp-proto-grpc ~= 1.5.0
zipkin-json =
    opentelemetry-exporter-zipkin-json ~= 1.5.0
    opentelemetry-propagator-b3 ~= 1.5.0
zipkin-proto =
    opentelemetry-exporter-zipkin-proto ~= 1.5.0
    opentelemetry-propagator-b3 ~= 1.5.0
jaeger-grpc =
    opentelemetry-exporter-jaeger-proto-grpc ~= 1.5.0
    opentelemetry-propagator-jaeger ~= 1.5.0
jaeger-thrift =
    opentelemetry-exporter-jaeger-thrift ~= 1.5.0
    opentelemetry-propagator-jaeger ~= 1.5.0
