[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-exporter-clickhouse-genai"
version = "0.1.0"
description = "ClickHouse exporter and OTLP collector for OpenTelemetry GenAI instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "opentelemetry-api ~= 1.20",
    "opentelemetry-sdk ~= 1.20",
    "opentelemetry-proto ~= 1.20",
    "clickhouse-driver >= 0.2.7",
    "grpcio >= 1.50.0",
    "aiohttp >= 3.8.0",
    "protobuf >= 3.19.0",
    "lz4 >= 4.0.0",
    "clickhouse-cityhash >= 1.0.2",
]

[project.optional-dependencies]
test = [
    "pytest >= 7.0",
    "pytest-asyncio >= 0.21",
]
dev = []

[project.scripts]
otel-clickhouse-collector = "opentelemetry.exporter.clickhouse_genai.cli:main"

[project.entry-points.opentelemetry_traces_exporter]
clickhouse_genai = "opentelemetry.exporter.clickhouse_genai:ClickHouseGenAISpanExporter"

[project.entry-points.opentelemetry_metrics_exporter]
clickhouse_genai = "opentelemetry.exporter.clickhouse_genai:ClickHouseGenAIMetricsExporter"

[project.entry-points.opentelemetry_logs_exporter]
clickhouse_genai = "opentelemetry.exporter.clickhouse_genai:ClickHouseGenAILogsExporter"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
