[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-genai-analytics-api"
version = "0.1.0"
description = "FastAPI analytics service for OpenTelemetry GenAI observability data in ClickHouse"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "fastapi >= 0.100.0",
    "uvicorn[standard] >= 0.22.0",
    "clickhouse-driver >= 0.2.7",
    "pydantic >= 2.0",
    "python-dateutil >= 2.8.0",
]

[project.optional-dependencies]
test = [
    "pytest >= 7.0",
    "pytest-asyncio >= 0.21",
    "httpx >= 0.24.0",
]
dev = [
    "ruff >= 0.1.0",
]

[project.scripts]
genai-analytics-api = "opentelemetry.genai.analytics.main:run"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
